--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Who are you and what are you doing here
+<!DOCTYPE html>
+<html lang="en_US">
+<head>
+	<meta charset="UTF-8">
+	<title> Mckinley's Personal Website </title>
+	<body> I honestly have no idea how to HTML.</body>
+</head>
