--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en_US">
 <head>
 	<meta charset="UTF-8">
-	<title> Mckinley's Personal Website </title>
-	<body> I honestly have no idea how to HTML.</body>
+	<head> Mckinley's Personal Website </head>
+	<p>
+	Here are links to my stuff!
+	</p>
+
+	<p>
+	<a href="files/induction.pdf">induction</a>
+	</p>
+	<p>
+	<a href="files/glossary.pdf">glossary</a>
+	</p>
+
+
 </head>
