--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en_US">
-<head>
+<body>
 	<meta charset="UTF-8">
-	<head> Mckinley's Personal Website </head>
+	<h1> Mckinley's Personal Website </h1>
 	<p>
 	Here are links to my stuff!
 	</p>
 
 	<p>
-	<a href="files/induction.pdf">induction</a>
+	<h3><a href="files/induction.pdf">induction</a></h3>
+		My handout on mathematical induction
 	</p>
 	<p>
-	<a href="files/glossary.pdf">glossary</a>
+	<h3><a href="files/glossary.pdf">glossary</a></h3>
+		A glossary of common math symbols
 	</p>
 
 
-</head>
+</body>
+</html>
