Add link to hdigh's article

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en_US">
 <body>
 	<meta charset="UTF-8">
-	<h1> Mckinley's Personal Website </h1>
+	<h1> Welcome! </h1>
+	<h2> My stuff </h2>
 	<p>
 	Here are links to my stuff!
 	</p>
@@ -11,11 +12,27 @@
 	<h3><a href="files/induction.pdf">induction</a></h3>
 		My handout on mathematical induction
 	</p>
+
 	<p>
 	<h3><a href="files/glossary.pdf">glossary</a></h3>
 		A glossary of common math symbols
 	</p>
 
+	<h2> Other people's stuff </h2>
+	<p>
+	Here are links to other people's stuff!
+	</p>
+	<h3><a href="https://how-did-i-get-here.com/59/">methods of proof</a> by hdigh</h3>
+	An excellent, beginner-friendly introduction to four methods of proof (direct, contradiction, contrapositive, and induction) together with examples and great practice problems.
+	<p>
+	
+	<hr>
+
+	<footer>
+		<p>
+		You can find me (Mckinley Xie) on Discord (faefeyfa#4843) or email me at <a href="mailto:mckinleyxie@gmail.com">mckinleyxie@gmail.com</a>
+		</p>
+	</footer>
 
 </body>
 </html>
