--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	Here are links to other people's stuff!
 	</p>
 	<h3><a href="https://how-did-i-get-here.com/59/">methods of proof</a> by hdigh</h3>
-	An excellent, beginner-friendly introduction to four methods of proof (direct, contradiction, contrapositive, and induction) together with examples and great practice problems.
+	An excellent, beginner-friendly introduction to four methods of proof (direct, contradiction, contrapositive, and induction) together with examples and great practice problems. This is blocked at school, if you're at school you should click <a href="files/mop.html">here</a>.
 	<p>
 	
 	<hr>
