--- a/files/mop.html
+++ b/files/mop.html
@@ -602,13 +602,13 @@ input[type="reset"]:focus,
 		
 						<div class="navbar bottom">
 						<div class="navbutton prevpost">
-				 <a href="/58/" class="navbuttontext">
+				 <a href="https://how-did-i-get-here.com/58/" class="navbuttontext">
 					&lt; prev
 				</a>
 			</div>
 						<span class="bluebar">|</span>
 						<div class="navbutton nextpost">
-				<a href="/60/" class="navbuttontext">
+				<a href="https://how-did-i-get-here.com/60/" class="navbuttontext">
 					next &gt;
 				</a>
 			</div>
