add message about mirror

--- a/files/mop.html
+++ b/files/mop.html
@@ -27,6 +27,8 @@
 		src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 	</script>
 
+	<p>This is a mirror of <a href="https://how-did-i-get-here.com/59">how-did-i-get-here.com/59</a>.</p>
+	<hr>
 
 	<title>methods of proof &#8211; how did i get here</title>
 <meta name='robots' content='max-image-preview:large' />
