disable search engine indexing

--- a/files/mop.html
+++ b/files/mop.html
@@ -31,7 +31,7 @@
 	<hr>
 
 	<title>methods of proof &#8211; how did i get here</title>
-<meta name='robots' content='max-image-preview:large' />
+<meta name='robots' content='noindex'/>
 <link rel='dns-prefetch' href='//fonts.googleapis.com' />
 <link rel='dns-prefetch' href='//s.w.org' />
 <link rel='dns-prefetch' href='//i0.wp.com' />
