--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	</p>
 
 	<p>
-	<h3><a href="files/induction.pdf">induction</a></h3>
+	<h3><a href="/files/induction.pdf">induction</a></h3>
 		My handout on mathematical induction
 	</p>
 
 	<p>
-	<h3><a href="files/glossary.pdf">glossary</a></h3>
+	<h3><a href="/files/glossary.pdf">glossary</a></h3>
 		A glossary of common math symbols
 	</p>
 
