unfix file links, be more aggresive about soliciting feedback

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	</p>
 
 	<p>
-	<h3><a href="/files/induction.pdf">induction</a></h3>
+	<h3><a href="files/induction.pdf">induction</a></h3>
 		My handout on mathematical induction
 	</p>
 
 	<p>
-	<h3><a href="/files/glossary.pdf">glossary</a></h3>
+	<h3><a href="files/glossary.pdf">glossary</a></h3>
 		A glossary of common math symbols
 	</p>
 
@@ -23,12 +23,15 @@
 	Here are links to other people's stuff!
 	</p>
 	<h3><a href="https://how-did-i-get-here.com/59/">methods of proof</a> by hdigh</h3>
-	An excellent, beginner-friendly introduction to four methods of proof (direct, contradiction, contrapositive, and induction) together with examples and great practice problems. This is blocked at school, if you're at school you should click <a href="/files/mop.html">here</a>.
+	An excellent, beginner-friendly introduction to four methods of proof (direct, contradiction, contrapositive, and induction) together with examples and great practice problems. This is blocked at school, if you're at school you should click <a href="files/mop.html">here</a>.
 	<p>
 	
 	<hr>
 
 	<footer>
+		<p>
+		Suggestions, questions, comments, etc. would be very much appreciated!
+		</p>
 		<p>
 		You can find me (Mckinley Xie) on Discord (faefeyfa#4843) or email me at <a href="mailto:mckinleyxie@gmail.com">mckinleyxie@gmail.com</a>
 		</p>
