--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en_US">
+
+<head>
+	<title>Mckinley's Website</title>
+	<link rel = "stylesheet" type = "text/css" href = "style.css">
+</head>
 <body>
 	<meta charset="UTF-8">
 	<h1> Welcome! </h1>
 	<h2> My stuff </h2>
 	<p>
-	Here are links to my stuff!
+	Here are links to my stuff! You can see source at <a href="https://github.com/MckinleyX/ib-math-handouts">github.com/MckinleyX/ib-math-handouts</a>
 	</p>
 
-	<p>
 	<h3><a href="files/induction.pdf">induction</a></h3>
+	<p>
 		My handout on mathematical induction
 	</p>
 
-	<p>
 	<h3><a href="files/glossary.pdf">glossary</a></h3>
+	<p>
 		A glossary of common math symbols
 	</p>
 
@@ -22,20 +27,23 @@
 	<p>
 	Here are links to other people's stuff!
 	</p>
+
 	<h3><a href="https://how-did-i-get-here.com/59/">methods of proof</a> by hdigh</h3>
-	An excellent, beginner-friendly introduction to four methods of proof (direct, contradiction, contrapositive, and induction) together with examples and great practice problems. This is blocked at school, if you're at school you should click <a href="files/mop.html">here</a>.
 	<p>
+		An excellent, beginner-friendly introduction to four methods of proof (direct, contradiction, contrapositive, and induction) together with examples and great practice problems. This is blocked at school, if you're at school you should click <a href="files/mop.html">here</a>.
+	</p>
 	
 	<hr>
-
-	<footer>
-		<p>
-		Suggestions, questions, comments, etc. would be very much appreciated!
-		</p>
-		<p>
-		You can find me (Mckinley Xie) on Discord (faefeyfa#4843) or email me at <a href="mailto:mckinleyxie@gmail.com">mckinleyxie@gmail.com</a>
-		</p>
-	</footer>
-
 </body>
+<footer>
+	<p>
+	Suggestions, questions, comments, etc. would be very much appreciated!
+	</p>
+	<p>
+	You can find me (Mckinley Xie) on Discord (faefeyfa#4843) or email me at <a href="mailto:mckinleyxie@gmail.com">mckinleyxie@gmail.com</a>
+	</p>
+	<p>
+	This is a Github Page, you can find the source at <a href="https://github.com/MckinleyX/mckinleyx.github.io">github.com/MckinleyX/mckinleyx.github.io</a>
+	</p>
+</footer>
 </html>
