reorganize yet again

--- a/index.html
+++ b/index.html
@@ -8,39 +8,38 @@
 <body>
 	<meta charset="UTF-8">
 	<h1> Welcome! </h1>
-	<h2> My stuff </h2>
 	<p>
-	Here are links to my stuff! You can see source at <a href="https://github.com/MckinleyX/ib-math-handouts">github.com/MckinleyX/ib-math-handouts</a>
+	Here are links to some stuff! Hopefully they'll be helpful. 
 	</p>
 
-	<h3><a href="files/induction.pdf">induction</a></h3>
-	<p>
-		My handout on mathematical induction
-	</p>
-
-	<h3><a href="files/glossary.pdf">glossary</a></h3>
+	<h2> General </h2>
+	<h3><a href="files/glossary.pdf">glossary</a> by me</h3>
 	<p>
 		A glossary of common math symbols
 	</p>
 
-	<h2> Other people's stuff </h2>
-	<p>
-	Here are links to other people's stuff!
-	</p>
-
+	<h2> Proofs </h2>
 	<h3><a href="https://how-did-i-get-here.com/59/">methods of proof</a> by hdigh</h3>
 	<p>
-		An excellent, beginner-friendly introduction to four methods of proof (direct, contradiction, contrapositive, and induction) together with examples and great practice problems. This is blocked at school, if you're at school you should click <a href="files/mop.html">here</a>.
+		An excellent, beginner-friendly introduction to four methods of proof (direct, contradiction, contrapositive, and induction) together with examples and great practice problems. This is blocked by FISD, if you're having trouble I have a mirror of it <a href="files/mop.html">here</a>.
 	</p>
-	
-	<hr>
+
+	<h3><a href="files/induction.pdf">induction</a> by me</h3>
+	<p>
+		My handout on mathematical induction
+	</p>
+
 </body>
+<hr>
 <footer>
 	<p>
-	Suggestions, questions, comments, etc. would be very much appreciated!
+	Suggestions, questions, comments, topic requests, etc. would be very much appreciated!
 	</p>
 	<p>
 	You can find me (Mckinley Xie) on Discord (faefeyfa#4843) or email me at <a href="mailto:mckinleyxie@gmail.com">mckinleyxie@gmail.com</a>
+	</p>
+	<p>
+	You can see the source code of my handouts at <a href="https://github.com/MckinleyX/ib-math-handouts">github.com/MckinleyX/ib-math-handouts</a>
 	</p>
 	<p>
 	This is a Github Page, you can find the source at <a href="https://github.com/MckinleyX/mckinleyx.github.io">github.com/MckinleyX/mckinleyx.github.io</a>
