more friendly contact?

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <hr>
 <footer>
 	<p>
-	Suggestions, questions, comments, topic requests, etc. would be very much appreciated!
+	Feel free to contact me if you have questions, comments, suggestions, or would like for me to cover a certain topic.
 	</p>
 	<p>
 	You can find me (Mckinley Xie) on Discord (faefeyfa#4843) or email me at <a href="mailto:mckinleyxie@gmail.com">mckinleyxie@gmail.com</a>
