add link to 3B1B Calculus videos

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 		My handout on mathematical induction
 	</p>
 
+	<h2> Calculus </h2>
+	<h3> <a href="https://youtube.com/playlist?list=PLZHQObOWTQDMsr9K-rj53DwVRMYO3t5Yr">The Essence of Calculus</a> by 3Blue1Brown</h3>
+		<p>A video series on calculus with the goal that you come away feeling like you've invented calculus yourself, with lots of visuals and intuition about <i>why</i> things are the way they are.
+		</p>
+
 </body>
 <hr>
 <footer>
