--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 		A glossary of common math symbols
 	</p>
 
+	<h3><a href="files/combo">combo</a> by me</h3>
+	<p>
+		Combo handout!
+	</p>
+
 	<h2> Proofs </h2>
 	<h3><a href="https://how-did-i-get-here.com/59/">methods of proof</a> by hdigh</h3>
 	<p>
