--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 		Combo handout!
 	</p>
 
+	<h3><a href="https://artofproblemsolving.com/alcumus">Alcumus</a> on AoPS</h3>
+	<p>
+		Alcumus is a way to practice problems!
+	</p>
+
 	<h2> Proofs </h2>
 	<h3><a href="https://how-did-i-get-here.com/59/">methods of proof</a> by hdigh</h3>
 	<p>
@@ -39,6 +44,10 @@
 		<p>A video series on calculus with the goal that you come away feeling like you've invented calculus yourself, with lots of visuals and intuition about <i>why</i> things are the way they are.
 		</p>
 
+	<h3> <a href="https://youtu.be/T647CGsuOVU">Complex Numbers are Real</a> by Welch Labs</h3>
+		<p>
+		A series of short (mostly ~5 minutes) videos explaining complex numbers, intuitively. (The videos starting around the 8th/9th ones are above and beyond the curriculum.)
+		</p>
 </body>
 <hr>
 <footer>
