tiny edit to add lateral

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 	<h3> <a href="https://youtu.be/T647CGsuOVU">Complex Numbers are Real</a> by Welch Labs</h3>
 		<p>
-		A series of short (mostly ~5 minutes) videos explaining complex numbers, intuitively. (The videos starting around the 8th/9th ones are above and beyond the curriculum.)
+		A series of short (mostly ~5 minutes) videos explaining complex (also known as lateral) numbers, intuitively. (The videos starting around the 8th/9th ones are above and beyond the curriculum.)
 		</p>
 </body>
 <hr>
