change everything to redirects

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</p>
 
 	<h2> General </h2>
-	<h3><a href="files/glossary.pdf">glossary</a> by me</h3>
+	<h3><a href="files/glossary">glossary</a> by me</h3>
 	<p>
 		A glossary of common math symbols
 	</p>
@@ -34,7 +34,7 @@
 		An excellent, beginner-friendly introduction to four methods of proof (direct, contradiction, contrapositive, and induction) together with examples and great practice problems. This is blocked by FISD, if you're having trouble I have a mirror of it <a href="files/mop.html">here</a>.
 	</p>
 
-	<h3><a href="files/induction.pdf">induction</a> by me</h3>
+	<h3><a href="files/induction">induction</a> by me</h3>
 	<p>
 		My handout on mathematical induction
 	</p>
