--- a/index.html
+++ b/index.html
@@ -13,15 +13,22 @@
 	</p>
 
 	<h2> General </h2>
-	<h3><a href="files/glossary.html">glossary</a> by me</h3>
+	<h3><a href="files/glossary.html">Glossary</a> by me</h3>
 	<p>
 		A glossary of common math symbols
 	</p>
 
-	<h3><a href="files/combo.html">combo</a> by me</h3>
+	<h3><a href="files/combo.html">Counting</a> by me</h3>
 	<p>
-		Combo handout!
+		My combo handout!
 	</p>
+
+	<h3><a href="https://raw.githubusercontent.com/amclearningprogram/amclearningprogram.github.io/main/handout/combinatorics/ALP_Basic_Counting_Techniques.pdf">Basic Counting Techniques</a> by bissue and 
+	<a href="https://amclearningprogram.github.io/handout/combinatorics/ALP_More_Counting.pdf">More Counting</a> by Kevin Min</h3>
+	<p>
+	Handouts made by ALP (the AMC Learning Program) that does a better job than I do.
+	</p>
+	
 
 	<h3><a href="https://artofproblemsolving.com/alcumus">Alcumus</a> on AoPS</h3>
 	<p>
@@ -34,7 +41,8 @@
 		An excellent, beginner-friendly introduction to four methods of proof (direct, contradiction, contrapositive, and induction) together with examples and great practice problems. This is blocked by FISD, if you're having trouble I have a mirror of it <a href="files/mop.html">here</a>.
 	</p>
 
-	<h3><a href="files/induction.html">induction</a> by me</h3>
+	<h3><a href="files/induction.html">Introduction to Induction</a> 
+		by me</h3>
 	<p>
 		My handout on mathematical induction
 	</p>
