--- a/index.html
+++ b/index.html
@@ -1,31 +1,7 @@
-<!DOCTYPE html>
-<html lang="en_US">
-
-<head>
-	<title>Mckinley's Website</title>
-	<link rel = "stylesheet" type = "text/css" href = "style.css">
-</head>
-<body>
-	<meta charset="UTF-8">
-	<h1> Mckinley's Website </h1>
-	<p>
-	Hello! This is a page where I put an indeterminable number
-	of things.
-	</p>
-	<p>
-	If you're looking for my CV it is <a href="files/cv.pdf">here</a>.
-	</p>
-	<p>
-	If you're looking for math links they're <a href="math.html">here</a>.
-	</p>
-</body>
-<footer>
-<hr>
-	<p>
-	You can find me (Mckinley Xie) on Discord (faefeyfa#4843) or email me at <a href="mailto:mckinleyxie@gmail.com">mckinleyxie@gmail.com</a>
-	</p>
-	<p>
-	This is a Github Page, you can find the source at <a href="https://github.com/MckinleyX/mckinleyx.github.io">github.com/MckinleyX/mckinleyx.github.io</a>
-	</p>
-</footer>
-</html>
+---
+# You don't need to edit this file, it's empty on purpose.
+# Edit theme's home layout instead if you wanna make some changes
+# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
+layout: home
+author_profile: true
+---
